# RootlessZachDSP

./: .gitignore  README.md  build.gradle.kts  settings.gradle
.github/checkpoint-payload/: realtime-source-00.part  realtime-source-01.part  realtime-source-02.part  realtime-source-03.part  realtime-source-04.part  realtime-source-05.part  realtime-source-06.part
.github/scripts/: apply_diagnostics_accuracy_patch.py  apply_rootless_phase_patch.py  rootless_icon.b64.part0
.github/workflows/: apply-rootless-device-patch.yml  build.yml  cleanup-realtime-checkpoint.yml  direct-player-checkpoint.yml  direct-player-integration-fix.yml  direct-player-ui-ci.yml  long-run-diagnostics-ci.yml  packaging-branding-checkpoint.yml  realtime-audio-checkpoint.yml  realtime-audio-pr.yml  settings-navigation-ui.yml  source-fidelity-ci.yml
app/: build.gradle.kts  lint.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: NOTICE_ROOTLESS_ZACH.txt
app/src/main/assets/licenses/: WavPack-BSD-3-Clause.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/flac_decoder/: flac_decoder_jni.cpp
app/src/main/cpp/wavpack_decoder/: wavpack_decoder_jni.cpp
app/src/main/res/drawable/: ic_rootless_zach_foreground.xml  ic_rootless_zach_monochrome.xml
app/src/main/res/layout/: activity_capture_apps.xml  activity_dsp_main.xml  item_capture_app.xml  onboarding_page1.xml
app/src/main/res/menu/: menu_main_bottom_left.xml
app/src/main/res/mipmap-anydpi/: ic_dsp_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_dsp_launcher.xml
app/src/main/res/values-ar-rSA/: strings.xml
app/src/main/res/values-cs-rCZ/: strings.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-fr-rFR/: strings.xml
app/src/main/res/values-hu-rHU/: strings.xml
app/src/main/res/values-in-rID/: strings.xml
app/src/main/res/values-it-rIT/: strings.xml
app/src/main/res/values-ja-rJP/: strings.xml
app/src/main/res/values-ko-rKR/: strings.xml
app/src/main/res/values-ms-rMY/: strings.xml
app/src/main/res/values-nl-rNL/: strings.xml
app/src/main/res/values-pl-rPL/: strings.xml
app/src/rootless/: AndroidManifest.xml
buildSrc/src/main/kotlin/: AndroidConfig.kt
ci-artifacts/realtime-checkpoint/: RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-arm64-v8a-debug.apk.badging.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-arm64-v8a-debug.apk.zipalign.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-armeabi-v7a-debug.apk.badging.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-armeabi-v7a-debug.apk.zipalign.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-universal-debug.apk.badging.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-universal-debug.apk.zipalign.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-x86-debug.apk.badging.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-x86-debug.apk.zipalign.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-x86_64-debug.apk.apksigner.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-x86_64-debug.apk.badging.txt  RootlessZachDSP-v2.0.0-alpha01-rootless-fdroid-x86_64-debug.apk.zipalign.txt  SHA256SUMS.txt
codeview/: build.gradle
docs/: .branch-placeholder  AGENT_HANDOFF.md  ANDROID_COMPATIBILITY.md  FEATURES_20_ROADMAP.md  IMPLEMENTATION_PLAN.md  ROADMAP.md
docs/audio/: DIRECT_PLAYER_USB_ARCHITECTURE.md  LOSSLESS_USB_AND_APP_CAPTURE_AUDIT.md  MQA_INTEGRATION_GATE_20260717.md  MQA_LEGAL_AND_TECHNICAL_RESEARCH.md
docs/checkpoints/: UNDERRUN_CLASSIFICATION.md
docs/device-validation/: AUDIO_DIAGNOSTICS_SCHEMA.md  PLUTO_20260715_ANALYSIS.md  S23_ULTRA_LONG_RUN_20260717.md  S23_ULTRA_SCHEMA2_HEADROOM_20260717.md
tools/: apply_direct_player_integration.py
tools/adb/: Collect-RootlessZachDspEvidence.ps1  Install-Verify-RootlessZachDsp.ps1  README.md
(+137 files in other folders)
